<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.carherpi.quoteapp.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="59dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/username"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/insertName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/insert_name"
                app:layout_constraintTop_toBottomOf="@+id/nameText"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/languageText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/select_language"
                app:layout_constraintTop_toBottomOf="@+id/insertName"
                tools:layout_editor_absoluteX="0dp" />

            <Spinner
                android:id="@+id/languageSelect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/languageText"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/httpMethodText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/http_method"
                app:layout_constraintTop_toBottomOf="@+id/languageSelect"
                tools:layout_editor_absoluteX="0dp" />

            <RadioGroup
                android:id="@+id/httpMethodPanel"
                android:layout_width="0dp"
                android:layout_height="77dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="217dp">

                <RadioButton
                    android:id="@+id/get"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:checked="true"
                    android:text="@string/get"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="204dp" />

                <RadioButton
                    android:id="@+id/post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/post"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="236dp" />

            </RadioGroup>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
